--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -12,7 +12,10 @@
     booktitle = {JuliaCon 2021 JuMP Track},
     selected={true},
     video={https://www.youtube.com/watch?v=9iXWtqm60sQ},
-    abstract={Many optimization problems involve minimizing a sum of univariate functions, each with a different variable, subject to coupling constraints. We present PiecewiseQuadratics.jl and SeparableOptimization.jl, two Julia packages for solving such problems when these univariate functions in the objective are piecewise-quadratic.},
+    abstract={Many optimization problems involve minimizing a sum of univariate functions, each with a different variable, subject to coupling constraints. We present
+    <a href="https://juliafirstorder.github.io/PiecewiseQuadratics.jl/stable/">PiecewiseQuadratics.jl</a>
+    and
+    <a href="https://juliafirstorder.github.io/SeparableOptimization.jl/stable/">SeparableOptimization.jl</a>, two Julia packages for solving such problems when these univariate functions in the objective are piecewise-quadratic.},
     preview={julia_firstorder.jpeg},
 
 }
