--- a/_posts/examples/_2015-05-15-images.md
+++ b/_posts/examples/_2015-05-15-images.md
@@ -32,7 +32,7 @@ Simply add `data-zoomable` to `<img>` tags that you want to make zoomable.
     </div>
 </div>
 
-The rest of the images in this post are all zoomable, arranged into different mini-galleries.
+The rest of the images in this post are all zoomable, arranged into different mini-galleries. The rest of the images in this post are all zoomable, arranged into different mini-galleries. The rest of the images in this post are all zoomable, arranged into different mini-galleries. The rest of the images in this post are all zoomable, arranged into different mini-galleries. The rest of the images in this post are all zoomable, arranged into different mini-galleries. 
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
@@ -44,4 +44,5 @@ The rest of the images in this post are all zoomable, arranged into different mi
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.html path="assets/img/7.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
+The rest of the images in this post are all zoomable, arranged into different mini-galleries. The rest of the images in this post are all zoomable, arranged into different mini-galleries. The rest of the images in this post are all zoomable, arranged into different mini-galleries. 
 </div>
