--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -17,8 +17,10 @@
     and
     <a href="https://juliafirstorder.github.io/SeparableOptimization.jl/stable/">SeparableOptimization.jl</a>, two Julia packages for solving such problems when these univariate functions in the objective are piecewise-quadratic.},
     preview={julia_firstorder.jpeg},
-
+    blog={/blog/2021/julia-first-order/},
 }
+% blog={/blog/2021/07/29/linearly-constrained-separable-optimization/}
+% blog={https://medium.com/blackrock-engineering/open-source-julia-packages-for-first-order-optimization-ac51f0f1aa09},
 
 @inproceedings{brown2019aisesuncertainty,
     abbr={AISES-19},
