--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{li2023internetexplorer,
-    abbr={CVPR-23},
+    abbr={⌛ CVPR-23 ⌛},
     title={Internet Explorer: Representation Learning on the Open Web},
     author={Li*, Alexander and Brown*, Ellis and Efros, Alexei A., and Pathak, Deepak},
     year={2023},
@@ -23,7 +23,8 @@
     address = {Tel Aviv, Israel},
     selected={true},
     abstract={We show that a curiosity-driven computer vision algorithm can learn to efficiently query Internet text-to-image search engines for images that improve the model's performance on a specified dataset. In contrast to typical self-supervised computer vision algorithms, which learn from static datasets, our model actively expands its training set with the most relevant images. First, we calculate the image-level curiosity reward as the negative distance of an image's representation to its nearest neighbor in the targeted dataset. This reward is easily estimated using only unlabeled data from the targeted dataset, and can be aggregated into a query-level reward that effectively identifies useful queries. Second, we use text embedding similarity scores to propagate observed curiosity rewards to untried text queries. This efficiently identifies relevant semantic clusters without any need for class labels or label names from the targeted dataset. Our method significantly outperforms models that require 1-2 orders of magnitude more compute and data.},
-    poster={presentations/2022_ECCV_InternetCuriosity_Poster.pdf}
+    poster={presentations/2022_ECCV_InternetCuriosity_Poster.pdf},
+    preview={2022_eccv_sslwin.png},
 }
 
 @article{brown2018stts,
@@ -38,6 +39,7 @@
     selected={true},
     abstract={Visual search for a spatiotemporal target occurs frequently in human experience---from military or aviation staff monitoring complex displays of multiple moving objects to daycare teachers monitoring a group of children on a playground for risky behaviors. In spatiotemporal search, unlike more traditional visual search tasks, the target cannot be identified from a single frame of visual experience; as the target is a spatiotemporal pattern that unfolds over time, detection of the target must also integrate information over time. We propose a new computational cognitive architecture used to model and understand human visual attention in the specific context of visual search for a spatiotemporal target. Results from a previous human participant study found that humans show interesting attentional capacity limitations in this type of search task.  Our architecture, called the SpatioTemporal Template-based Search (STTS) architecture, solves the same search task from the study using a wide variety of parameterized models that each represent a different cognitive theory of visual attention from the psychological literature.  We present results from initial computational experiments using STTS as a first step towards understanding the computational nature of attentional bottlenecks in this type of search task, and we discuss how continued STTS experiments will help determine which theoretical models best explain the capacity limitations shown by humans.  We expect that results from this research will help refine the design of visual information displays to help human operators perform difficult, real-world monitoring tasks.},
     pdf={http://cogsys.org/journal/volume6/article-6-8.pdf},
+    preview={2018_stts.gif},
 }
 
 @inproceedings{brown2018spatiotemporal,
