improve abbrev bars

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{li2023internetexplorer,
-    abbr={⌛ CVPR-23 ⌛},
+    abbr={⏳ CVPR-23 ⌛},
     title={Internet Explorer: Representation Learning on the Open Web},
     author={Li*, Alexander and Brown*, Ellis and Efros, Alexei A., and Pathak, Deepak},
     year={2023},
