--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -5,7 +5,7 @@
 @inproceedings{brown2021separableopt,
     abbr={JuliaCon-21},
     title={Linearly Constrained Separable Optimization},
-    author={Moehle, Nicholas and Brown, Ellis and Kochenderfer, Mykel J.},
+    author={Brown, Ellis and Moehle, Nicholas and Kochenderfer, Mykel J.},
     year={2021},
     month={July},
     day={29},
