--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,12 @@
 
 @string{aps = {American Physical Society,}}
 
-@inproceedings{li2023internetexplorer,
-    abbr={⏳ CVPR-23 ⌛},
-    title={Internet Explorer: Representation Learning on the Open Web},
+@article{li2023internetexplorer,
+    abbr={⏳},
+    title={Internet Explorer: Targeted Representation Learning on the Open Web},
     author={Li*, Alexander and Brown*, Ellis and Efros, Alexei A., and Pathak, Deepak},
     year={2023},
-    booktitle = {Conference on Computer Vision and Pattern Recognition},
+    journal={Under Review},
     selected={true},
     under_review={true},
 }
