--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,12 +24,13 @@
     selected={true},
 }
 
-@article{li2023internet,
+@inproceedings{li2023internet,
     abbr={preprint},
     title={Internet Explorer: Targeted Representation Learning on the Open Web},
     author={Li*, Alexander C. and Brown*, Ellis and Efros, Alexei A., and Pathak, Deepak},
     year={2023},
-    journal={arXiv:cs.LG},
+    booktitle={International Conference on Machine Learning},
+    organization={PMLR},
     selected={true},
     arxiv={2302.14051},
     website={https://internet-explorer-ssl.github.io/},
