--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,8 +3,23 @@
 
 @string{aps = {American Physical Society,}}
 
+@mastersthesis{brown2023online,
+    author       = {Ellis Brown},
+    bibtex_show={true},
+    title        = {Online Representation Learning on the Open Web},
+    school       = {Carnegie Mellon University},
+    year         = 2023,
+    abbr         = {Master's Thesis},
+    pdf          = {https://ellisbrown.github.io/assets/pdf/papers/2023_CMU_Masters_Thesis.pdf},
+    slides       = {https://ellisbrown.github.io/assets/pdf/presentations/2023_CMU_Masters_Defense.pdf},
+    video        = {https://youtu.be/haT48f2TPxs},
+    code         = {https://github.com/ellisbrown/cmu-masters-thesis},
+}
+
+
 @article{li2023diffusion,
     abbr={preprint},
+    bibtex_show={true},
     title={Your Diffusion Model is Secretly a Zero-Shot Classifier}, 
     author={Alexander C. Li and Mihir Prabhudesai and Shivam Duggal and Ellis Brown and Deepak Pathak},
     year={2023},
@@ -26,6 +41,7 @@
 
 @inproceedings{li2023internet,
     abbr={preprint},
+    bibtex_show={true},
     title={Internet Explorer: Targeted Representation Learning on the Open Web},
     author={Li*, Alexander C. and Brown*, Ellis and Efros, Alexei A., and Pathak, Deepak},
     year={2023},
