--- a/_news/2023_phd.md
+++ b/_news/2023_phd.md
@@ -8,7 +8,9 @@ Defended my [Master's thesis](https://youtu.be/haT48f2TPxs) and graduated from C
 <!-- NYU PhD with Saining -->
 Excited to start a CS PhD at [NYU][CILVR] advised by 
 [Saining Xie][Saining]
+and [Rob Fergus][Fergus]
 this fall 🎉
 
 [CILVR]: https://wp.nyu.edu/cilvr/
 [Saining]: https://www.sainingxie.com/
+[Fergus]: https://cs.nyu.edu/~fergus/
