--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,24 +1,39 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+
+
+@article{yang2024virl,
+    author={Yang, Jihan and Ding, Runyu and Brown, Ellis and Qi, Xiaojuan and Xie, Saining},
+    title={V-IRL: Grounding Virtual Intelligence in Real Life},
+    journal={arXiv preprint arXiv:2402.TBD},
+    year={2024},
+    website={https://virl-platform.github.io/},
+    pdf={https://virl-platform.github.io/static/V-IRL.pdf},
+    code={https://github.com/VIRL-Platform/VIRL},
+    abstract={There is a sensory gulf between the Earth that humans inhabit and the digital realms in which modern AI agents are created. To develop AI agents that can sense, think, and act as ﬂexibly as humans in real-world settings, it is imperative to bridge the realism gap between the digital and physical worlds. How can we embody agents in an environment as rich and diverse as the one we inhabit, without the constraints imposed by real hardware and control? Towards this end, we introduce V-IRL: a platform that enables agents to scalably interact with the real world in a virtual yet realistic environment. Our platform serves as a playground for developing agents that can accomplish various practical tasks and as a vast testbed for measuring progress in capabilities spanning perception, decision-making, and interaction with real-world data across the entire globe.},
+    bibtex_show={true},
+    abbr={arXiv},
+    selected={true},
+}
+
 
 @mastersthesis{brown2023online,
     author       = {Ellis Brown},
-    bibtex_show={true},
     title        = {Online Representation Learning on the Open Web},
     school       = {Carnegie Mellon University},
-    year         = 2023,
+    year         = {2023},
     abbr         = {Master's Thesis},
     pdf          = {https://ellisbrown.github.io/assets/pdf/papers/2023_CMU_Masters_Thesis.pdf},
     slides       = {https://ellisbrown.github.io/assets/pdf/presentations/2023_CMU_Masters_Defense.pdf},
     video        = {https://youtu.be/haT48f2TPxs},
     code         = {https://github.com/ellisbrown/cmu-masters-thesis},
+    bibtex_show  = {true},
 }
 
 
 @InProceedings{li2023diffusion,
-    abbr={preprint},
+    abbr={ICCV},
     bibtex_show={true},
     title={Your Diffusion Model is Secretly a Zero-Shot Classifier}, 
     author={Alexander C. Li and Mihir Prabhudesai and Shivam Duggal and Ellis Brown and Deepak Pathak},
@@ -38,7 +53,7 @@
 }
 
 @inproceedings{li2023internet,
-    abbr={preprint},
+    abbr={ICML},
     bibtex_show={true},
     title={Internet Explorer: Targeted Representation Learning on the Open Web},
     author={Li*, Alexander C. and Brown*, Ellis and Efros, Alexei A., and Pathak, Deepak},
@@ -77,7 +92,7 @@
     volume = {6},
     pages = {101--118},
     selected={true},
-    abstract={Visual search for a spatiotemporal target occurs frequently in human experience---from military or aviation staff monitoring complex displays of multiple moving objects to daycare teachers monitoring a group of children on a playground for risky behaviors. In spatiotemporal search, unlike more traditional visual search tasks, the target cannot be identified from a single frame of visual experience; as the target is a spatiotemporal pattern that unfolds over time, detection of the target must also integrate information over time. We propose a new computational cognitive architecture used to model and understand human visual attention in the specific context of visual search for a spatiotemporal target. Results from a previous human participant study found that humans show interesting attentional capacity limitations in this type of search task.  Our architecture, called the SpatioTemporal Template-based Search (STTS) architecture, solves the same search task from the study using a wide variety of parameterized models that each represent a different cognitive theory of visual attention from the psychological literature.  We present results from initial computational experiments using STTS as a first step towards understanding the computational nature of attentional bottlenecks in this type of search task, and we discuss how continued STTS experiments will help determine which theoretical models best explain the capacity limitations shown by humans.  We expect that results from this research will help refine the design of visual information displays to help human operators perform difficult, real-world monitoring tasks.},
+    abstract={Visual search for a spatiotemporal target occurs frequently in human experience---from military or aviation staff monitoring complex displays of multiple moving objects to daycare teachers monitoring a group of children on a playground for risky behaviors. In spatiotemporal search, unlike more traditional visual search tasks, the target cannot be identified from a single frame of visual experience; as the target is a spatiotemporal pattern that unfolds over time, detection of the target must also integrate information over time. We propose a new computational cognitive architecture used to model and understand human visual attention in the specific context of visual search for a spatiotemporal target. Results from a previous human participant study found that humans show interesting attentional capacity limitations in this type of search task.  Our architecture, called the SpatioTemporal Template-based Search (STTS) architecture, solves the same search task from the study using a wide variety of parameterized mod els that each represent a different cognitive theory of visual attention from the psychological literature.  We present results from initial computational experiments using STTS as a first step towards understanding the computational nature of attentional bottlenecks in this type of search task, and we discuss how continued STTS experiments will help determine which theoretical models best explain the capacity limitations shown by humans.  We expect that results from this research will help refine the design of visual information displays to help human operators perform difficult, real-world monitoring tasks.},
     pdf={http://cogsys.org/journal/volume6/article-6-8.pdf},
     preview={2018_stts.gif},
 }
