fix broken links

--- a/_bibliography/reports.bib
+++ b/_bibliography/reports.bib
@@ -7,7 +7,7 @@
     address     = {Pittsburgh, PA},
     year        = {2022},
     month       = {May},
-    website     = {https://zippy-oatmeal-4b5.notion.site/Self-Supervised-Representation-Learning-via-Curiosity-Driven-Exploration-0cff22673f244cfeb6a6c3c8a0d0af37},
+    website     = {https://ellisbrown.notion.site/Self-Supervised-Representation-Learning-via-Curiosity-Driven-Exploration-0cff22673f244cfeb6a6c3c8a0d0af37},
     abstract    = {``The performance of machine learning methods is heavily dependent on the choice of data representation'' — Bengio et al, 2012.<br>
     As machine learning continues to be applied to more complex and important tasks, this dependence on the data representation will only increase. While current machine learning methods are bottlenecked by representation quality, current methods for learning representations are bottlenecked on the dataset size. But this process of creating large static datasets, as is the mainstream practice, is expensive, time consuming, and heavily prone to human bias.<br>
     Machine learning practitioners have increasingly been focusing on paradigms such as unsupervised and self-supervised learning to help alleviate the expense of supervision in working with bigger datasets; however, these methods still suffer from the issues of static datasets. One promising approach to learn good representations without a fixed datasets is by directly interacting with the environment. The visual state space of real environments/simulators can be quite huge and intractable to explore fully. Hence, in this project, we investigate intelligent curiosity driven exploration strategies to learn good representations from a simulator using self supervised learning objectives. We discuss the effectiveness of different strategies, issues and future directions of research in this field.}
