--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,11 +2,11 @@
 ---
 
 
-
 @article{yang2024virl,
     author={Yang, Jihan and Ding, Runyu and Brown, Ellis and Qi, Xiaojuan and Xie, Saining},
     title={V-IRL: Grounding Virtual Intelligence in Real Life},
-    journal={arXiv preprint arXiv:2402.TBD},
+    journal={arXiv preprint arXiv:2402.03310},
+    arxiv={2402.03310},
     year={2024},
     website={https://virl-platform.github.io/},
     pdf={https://virl-platform.github.io/static/V-IRL.pdf},
@@ -41,6 +41,7 @@
     booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
     year      = {2023},
     pages     = {2206-2217},
+    arxiv     = {2303.16203},
     website={https://diffusion-classifier.github.io/},
     pdf={https://diffusion-classifier.github.io/static/docs/DiffusionClassifier.pdf},
     preview={diffusion_classifier.jpg},
