--- a/_news/2024_ai2.md
+++ b/_news/2024_ai2.md
@@ -4,7 +4,7 @@ date: 2024-02-20 12:00:00-0400
 inline: true
 ---
 
-I will be joining [AllenAI (AI2)][AI2] as a Resesarch Intern this summer in Seattle, working with [Ross Girshick][rbg] and the PRIOR team!
+I will be joining [AllenAI (AI2)][AI2] as a Resesarch Intern this summer in Seattle, working with [Ross Girshick][rbg]!
 
 [AI2]: https://allenai.org/
 [rbg]: https://www.rossgirshick.info/
