--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,10 +2,9 @@
 ---
 
 
-@article{tong2024cambrian,
+@InProceedings{tong2024cambrian,
     title={{Cambrian-1: A Fully Open, Vision-Centric Exploration of Multimodal LLMs}},
     author={Tong, Shengbang and Brown, Ellis and Wu, Penghao and Woo, Sanghyun and Middepogu, Manoj and Akula, Sai Charitha and Yang, Jihan and Yang, Shusheng, and Iyer, Adithya and Pan, Xichen and Wang, Austin and Fergus, Rob and LeCun, Yann and Xie, Saining},
-    journal={arXiv preprint arXiv:2406.16860},
     year={2024},
     arxiv={2406.16860},
     website={https://cambrian-mllm.github.io/},
@@ -16,12 +15,13 @@
     abbr={arXiv},
     preview={cambrian.png},
     selected={true},
+    booktitle={NeurIPS},
+    award={Oral Presentation},
 }
 
-@article{yang2024virl,
+@InProceedings{yang2024virl,
     author={Yang, Jihan and Ding, Runyu and Brown, Ellis and Qi, Xiaojuan and Xie, Saining},
     title={V-IRL: Grounding Virtual Intelligence in Real Life},
-    journal={arXiv preprint arXiv:2402.03310},
     arxiv={2402.03310},
     year={2024},
     website={https://virl-platform.github.io/},
@@ -32,6 +32,7 @@
     abbr={arXiv},
     preview={virl.webp},
     selected={true},
+    booktitle={ECCV},
 }
 
 
@@ -55,7 +56,7 @@
     title={Your Diffusion Model is Secretly a Zero-Shot Classifier}, 
     author={Alexander C. Li and Mihir Prabhudesai and Shivam Duggal and Ellis Brown and Deepak Pathak},
     year={2023},
-    booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+    booktitle = {ICCV},
     year      = {2023},
     pages     = {2206-2217},
     arxiv     = {2303.16203},
@@ -76,8 +77,7 @@
     title={Internet Explorer: Targeted Representation Learning on the Open Web},
     author={Li*, Alexander C. and Brown*, Ellis and Efros, Alexei A., and Pathak, Deepak},
     year={2023},
-    booktitle={International Conference on Machine Learning},
-    organization={PMLR},
+    booktitle={ICML},
     selected={true},
     arxiv={2302.14051},
     website={https://internet-explorer-ssl.github.io/},
@@ -92,7 +92,7 @@
     title={Internet Curiosity: Directed Unsupervised Learning on Uncurated Internet Data},
     author={Li*, Alexander C. and Brown*, Ellis and Efros, Alexei A., and Pathak, Deepak},
     year={2022},
-    booktitle = {European Conference on Computer Vision Workshop on ``Self Supervised Learning: What is Next?''},
+    booktitle = {ECCV Workshop on ``Self Supervised Learning: What is Next?''},
     address = {Tel Aviv, Israel},
     abstract={We show that a curiosity-driven computer vision algorithm can learn to efficiently query Internet text-to-image search engines for images that improve the model's performance on a specified dataset. In contrast to typical self-supervised computer vision algorithms, which learn from static datasets, our model actively expands its training set with the most relevant images. First, we calculate the image-level curiosity reward as the negative distance of an image's representation to its nearest neighbor in the targeted dataset. This reward is easily estimated using only unlabeled data from the targeted dataset, and can be aggregated into a query-level reward that effectively identifies useful queries. Second, we use text embedding similarity scores to propagate observed curiosity rewards to untried text queries. This efficiently identifies relevant semantic clusters without any need for class labels or label names from the targeted dataset. Our method significantly outperforms models that require 1-2 orders of magnitude more compute and data.},
     poster={presentations/2022_ECCV_InternetCuriosity_Poster.pdf},
@@ -119,7 +119,7 @@
     abbr={ACS-18},
     author = {Brown, Ellis and Park, Soobeen and Warford, Noel and Seiffert, Adriane and Kawamura, Kazuhiko and Lappin, Joe and Kunda, Maithilee},
     title = {SpatioTemporal Template-based Search: An Architecture for Spatiotemporal Template-Based Search},
-    booktitle = {Proceedings of the 6th Conference on Advances in Cognitive Systems},
+    booktitle = {Advances in Cognitive Systems},
     year = {2018},
     address = {Stanford, CA},
     month = {August},
