--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 
 @InProceedings{tong2024cambrian,
     title={{Cambrian-1: A Fully Open, Vision-Centric Exploration of Multimodal LLMs}},
-    author={Tong, Shengbang and Brown, Ellis and Wu, Penghao and Woo, Sanghyun and Middepogu, Manoj and Akula, Sai Charitha and Yang, Jihan and Yang, Shusheng, and Iyer, Adithya and Pan, Xichen and Wang, Austin and Fergus, Rob and LeCun, Yann and Xie, Saining},
+    author={Tong*, Shengbang and Brown*, Ellis and Wu*, Penghao and Woo, Sanghyun and Middepogu, Manoj and Akula, Sai Charitha and Yang, Jihan and Yang, Shusheng, and Iyer, Adithya and Pan, Xichen and Wang, Austin and Fergus, Rob and LeCun, Yann and Xie, Saining},
     year={2024},
     arxiv={2406.16860},
     website={https://cambrian-mllm.github.io/},
