--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
     preview={cambrian.png},
     selected={true},
     booktitle={NeurIPS},
-    award={Oral Presentation},
+    award={Oral Presentation (1.8%)},
 }
 
 @InProceedings{yang2024virl,
@@ -30,7 +30,7 @@
     abstract={There is a sensory gulf between the Earth that humans inhabit and the digital realms in which modern AI agents are created. To develop AI agents that can sense, think, and act as ﬂexibly as humans in real-world settings, it is imperative to bridge the realism gap between the digital and physical worlds. How can we embody agents in an environment as rich and diverse as the one we inhabit, without the constraints imposed by real hardware and control? Towards this end, we introduce V-IRL: a platform that enables agents to scalably interact with the real world in a virtual yet realistic environment. Our platform serves as a playground for developing agents that can accomplish various practical tasks and as a vast testbed for measuring progress in capabilities spanning perception, decision-making, and interaction with real-world data across the entire globe.},
     bibtex_show={true},
     abbr={arXiv},
-    preview={virl.webp},
+    preview={virl_2.png},
     selected={true},
     booktitle={ECCV},
 }
