fix with new merge

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 
 
 @InProceedings{tong2024cambrian,
+    abbr={NeurIPS},
     title={{Cambrian-1: A Fully Open, Vision-Centric Exploration of Multimodal LLMs}},
     author={Tong*, Shengbang and Brown*, Ellis and Wu*, Penghao and Woo, Sanghyun and Middepogu, Manoj and Akula, Sai Charitha and Yang, Jihan and Yang, Shusheng, and Iyer, Adithya and Pan, Xichen and Wang, Austin and Fergus, Rob and LeCun, Yann and Xie, Saining},
     year={2024},
@@ -12,19 +13,14 @@
     code={https://github.com/cambrian-mllm/cambrian},
     abstract={We introduce Cambrian-1, a family of multimodal LLMs (MLLMs) designed with a vision-centric approach. While stronger language models can enhance multimodal capabilities, the design choices for vision components are often insufficiently explored and disconnected from visual representation learning research. This gap hinders accurate sensory grounding in real-world scenarios. Our study uses LLMs and visual instruction tuning as an interface to evaluate various visual representations, offering new insights into different models and architectures---self-supervised, strongly supervised, or combinations thereof---based on experiments with over 20 vision encoders. We critically examine existing MLLM benchmarks, addressing the difficulties involved in consolidating and interpreting results from various tasks, and introduce a new vision-centric benchmark, CV-Bench. To further improve visual grounding, we propose the Spatial Vision Aggregator (SVA), a dynamic and spatially-aware connector that integrates high-resolution vision features with LLMs while reducing the number of tokens. Additionally, we discuss the curation of high-quality visual instruction-tuning data from publicly available sources, emphasizing the importance of data source balancing and distribution ratio. Collectively, Cambrian-1 not only achieves state-of-the-art performance but also serves as a comprehensive, open cookbook for instruction-tuned MLLMs. We provide model weights, code, supporting tools, datasets, and detailed instruction-tuning and evaluation recipes. We hope our release will inspire and accelerate advancements in multimodal systems and visual representation learning.},
     bibtex_show={true},
-    abbr={arXiv},
     preview={cambrian.png},
     selected={true},
     booktitle={NeurIPS},
-    award={Oral Presentation (1.8%)},
-    % award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-    % award_name={Nobel Prize}
-    % annotation={* Example use of superscripts<br>† Albert Einstein},
-    % altmetric={248277},
-    % dimensions={true},
-    % google_scholar_id={qyhmnyLat1gC},
-    % abbr={Vision}
+    annotation={* Equal contribution},
+    award_name={Oral <strong>(1.8%)</strong>},
+    award={Selected for Oral Presentation <strong>(1.8%)</strong> at NeurIPS 2024},
 }
+% google_scholar_id={LkGwnXOMwfcC},
 
 @InProceedings{yang2024virl,
     author={Yang, Jihan and Ding, Runyu and Brown, Ellis and Qi, Xiaojuan and Xie, Saining},
@@ -36,7 +32,7 @@
     code={https://github.com/VIRL-Platform/VIRL},
     abstract={There is a sensory gulf between the Earth that humans inhabit and the digital realms in which modern AI agents are created. To develop AI agents that can sense, think, and act as ﬂexibly as humans in real-world settings, it is imperative to bridge the realism gap between the digital and physical worlds. How can we embody agents in an environment as rich and diverse as the one we inhabit, without the constraints imposed by real hardware and control? Towards this end, we introduce V-IRL: a platform that enables agents to scalably interact with the real world in a virtual yet realistic environment. Our platform serves as a playground for developing agents that can accomplish various practical tasks and as a vast testbed for measuring progress in capabilities spanning perception, decision-making, and interaction with real-world data across the entire globe.},
     bibtex_show={true},
-    abbr={arXiv},
+    abbr={ECCV},
     preview={virl_2.png},
     selected={true},
     booktitle={ECCV},
@@ -47,8 +43,9 @@
     author       = {Ellis Brown},
     title        = {Online Representation Learning on the Open Web},
     school       = {Carnegie Mellon University},
+    note         = {Committee: Deepak Pathak, Alexei Efros, and Deva Ramanan},
     year         = {2023},
-    abbr         = {Master's Thesis},
+    abbr         = {MS Thesis},
     pdf          = {https://ellisbrown.github.io/assets/pdf/papers/2023_CMU_Masters_Thesis.pdf},
     slides       = {https://ellisbrown.github.io/assets/pdf/presentations/2023_CMU_Masters_Defense.pdf},
     video        = {https://youtu.be/haT48f2TPxs},
@@ -94,7 +91,7 @@
 }
 
 @inproceedings{li2022internetcuriosity,
-    abbr={ECCV SSLWIN},
+    abbr={ECCV},
     bibtex_show={true},
     title={Internet Curiosity: Directed Unsupervised Learning on Uncurated Internet Data},
     author={Li*, Alexander C. and Brown*, Ellis and Efros, Alexei A., and Pathak, Deepak},
@@ -108,7 +105,7 @@
 }
 
 @article{brown2018stts,
-    abbr={Adv. CogSys},
+    abbr={ACS},
     bibtex_show={true},
     title={An Architecture for Spatiotemporal Template-Based Search},
     author={Brown, Ellis and Park, Soobeen, and Wardord, Noel and Seiffert, Adriane and Kawamura, Kazuhiko and Lappin, Joseph and Kunda, Maithilee},
@@ -123,7 +120,7 @@
 }
 
 @inproceedings{brown2018spatiotemporal,
-    abbr={ACS-18},
+    abbr={ACS},
     author = {Brown, Ellis and Park, Soobeen and Warford, Noel and Seiffert, Adriane and Kawamura, Kazuhiko and Lappin, Joe and Kunda, Maithilee},
     title = {SpatioTemporal Template-based Search: An Architecture for Spatiotemporal Template-Based Search},
     booktitle = {Advances in Cognitive Systems},
