--- a/_bibliography/reports.bib
+++ b/_bibliography/reports.bib
@@ -1,9 +1,10 @@
 
 @techreport{report:shek2022reprexplore,
-    abbr = {CMU 16-824},
+    abbr = {CMU},
     author      = {Shek, Alvin and Brown, Ellis and Pande, Nilay and Noursi, David},
     title       = {Self-Supervised Representation Learning via Curiosity-Driven Exploration},
     institution = {Robotics Institute, Carnegie Mellon University},
+    note        = {16-824: Visual Learning and Recognition},
     address     = {Pittsburgh, PA},
     year        = {2022},
     month       = {May},
@@ -14,10 +15,11 @@
 }
 
 @techreport{report:brown2021interp,
-    abbr = {CMU 16-811},
+    abbr = {CMU},
     author      = {Brown, Ellis and Roth, Aaron M.},
     title       = {Scaling Interpretable Reinforcement Learning via Decision Trees to Minecraft},
     institution = {Robotics Institute, Carnegie Mellon University},
+    note        = {16-811: Math Fundamentals for Robotics},
     address     = {Pittsburgh, PA},
     year        = {2021},
     month       = {December},
@@ -26,10 +28,11 @@
 }
 
 @techreport{report:brown2020seclending,
-    abbr = {Stanford CS 361},
+    abbr = {Stanford},
     author      = {Brown, Ellis},
     title       = {Securities Lending Policy Optimization},
-    institution = {Department of Computer Science, Stanford University},
+    institution = {Computer Science Department, Stanford University},
+    note        = {CS 361: Engineering Design Optimization},
     address     = {Stanford, CA},
     year        = {2020},
     month       = {June},
@@ -38,10 +41,11 @@
 }
 
 @techreport{report:brown2019uncertainty,
-    abbr = {Columbia CS E6699},
+    abbr = {Columbia},
     author      = {Brown*, Ellis and Manko*, Melanie and Matlin*, Ethan},
     title       = {Modeling Uncertainty in Bayesian Neural Networks with Dropout},
-    institution = {Department of Electrical Engineering and Computer Science, Columbia University},
+    institution = {EECS Department, Columbia University},
+    note        = {E6699: Mathematics of Deep Learning},
     address     = {New York, NY},
     year        = {2019},
     month       = {May},
