--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -3,7 +3,7 @@
 
 
 @inproceedings{brown2021separableopt,
-    abbr={JuliaCon-21},
+    abbr={JuliaCon},
     title={Linearly Constrained Separable Optimization},
     author={Brown, Ellis and Moehle, Nicholas and Kochenderfer, Mykel J.},
     year={2021},
@@ -23,7 +23,7 @@
 % blog={https://medium.com/blackrock-engineering/open-source-julia-packages-for-first-order-optimization-ac51f0f1aa09},
 
 @inproceedings{brown2019aisesuncertainty,
-    abbr={AISES-19},
+    abbr={AISES},
     title={Modeling Uncertainty in Bayesian Neural Networks with Dropout: The effect of weight prior and network architecture selection},
     author={Brown*, Ellis and Manko*, Melanie and Matlin*, Ethan},
     year={2019},
@@ -37,7 +37,7 @@
 }
 
 @inproceedings{brown2017infosalience,
-    abbr={AISES-17},
+    abbr={AISES},
     title={Computational Cognitive Systems to Model Information Salience},
     author={Brown, Ellis and Seiffert, Adriane and Warford, Noel and Park, Soobeen and Kunda, Maithilee},
     year={2017},
