--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -43,9 +43,9 @@
     author       = {Ellis Brown},
     title        = {Online Representation Learning on the Open Web},
     school       = {Carnegie Mellon University},
-    note         = {Committee: Deepak Pathak, Alexei Efros, and Deva Ramanan},
+    note         = {Master's Thesis. Committee: Deepak Pathak, Alexei Efros, and Deva Ramanan},
     year         = {2023},
-    abbr         = {MS Thesis},
+    abbr         = {Thesis},
     pdf          = {https://ellisbrown.github.io/assets/pdf/papers/2023_CMU_Masters_Thesis.pdf},
     slides       = {https://ellisbrown.github.io/assets/pdf/presentations/2023_CMU_Masters_Defense.pdf},
     video        = {https://youtu.be/haT48f2TPxs},
@@ -105,7 +105,7 @@
 }
 
 @article{brown2018stts,
-    abbr={ACS},
+    abbr={CogSys},
     bibtex_show={true},
     title={An Architecture for Spatiotemporal Template-Based Search},
     author={Brown, Ellis and Park, Soobeen, and Wardord, Noel and Seiffert, Adriane and Kawamura, Kazuhiko and Lappin, Joseph and Kunda, Maithilee},
@@ -120,7 +120,7 @@
 }
 
 @inproceedings{brown2018spatiotemporal,
-    abbr={ACS},
+    abbr={CogSys},
     author = {Brown, Ellis and Park, Soobeen and Warford, Noel and Seiffert, Adriane and Kawamura, Kazuhiko and Lappin, Joe and Kunda, Maithilee},
     title = {SpatioTemporal Template-based Search: An Architecture for Spatiotemporal Template-Based Search},
     booktitle = {Advances in Cognitive Systems},
