--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -30,6 +30,7 @@
     month={October},
     day={10},
     booktitle = {American Indian Science and Engineering Society National Conference},
+    preview={AISES-Logo.png},
     selected={true},
     abstract= {While neural networks are quite successful at making predictions, these predictions are usually point estimates lacking any notion of uncertainty. However, when fed data very different from its training data, it is useful for a neural network to realize that its predictions could very well be wrong and encode that information through uncertainty bands around its point estimate prediction. Bayesian Neural Networks trained with Dropout are a natural way of modeling this uncertainty with theoretical foundations relating them to Variational Inference approximating Gaussian Process posteriors. In this paper, we investigate the effects of weight prior selection and network architecture on uncertainty estimates derived from Dropout Bayesian Neural Networks.},
     poster={presentations/2019_bnn_uncertainty_aises_poster.pdf},
@@ -44,6 +45,7 @@
     month={September},
     day={21},
     booktitle = {American Indian Science and Engineering Society National Conference},
+    preview={AISES-Logo.png},
     selected={true},
     abstract= {This project seeks to model human information salience---in this case, how much a person will notice a piece of visual information---using an approach from artificial intelligence that involves building computational cognitive systems models of human performance on certain tasks.  Too much visual information can be overwhelming, making it difficult for people to discern the important parts.  This can be detrimental in many situations where visual attention is crucial, such as air traffic control systems, military information displays, or TSA screening stations.  Results from a previous human participant study found that humans show interesting limitations in attentional capacity when asked to monitor a complex moving display.  We create artificial computational agents based on various cognitive models of visual attention to solve the same visual information salience task and run computational experiments to measure cognitive performance.  In follow-up work, we will compare the performance of our models to the human data to determine which models best explain the capacity limitations shown by people.},
     slides={https://docs.google.com/presentation/d/e/2PACX-1vTZMsXTsUARrHq0TMRYhMBA3yaHOUI8OnS0GmsczXkZEDnjPtLuTj-py7MAGPmCs5FmpAkHTILFdTdr/pub?start=false&loop=false&delayms=3000},
